--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <i class="fab fa-node-js" title="Node.js"></i>
             <i class="fab fa-python" title="Python"></i>
             </div>
-            <a href="#" class="btn">Ver Proyecto</a>
+            <a href="https://discord.gg/DTA4agWEsJ" class="btn">Ver Proyecto</a>
         </div>
         </div>
     </section>
