--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@
             <button id="sidebar-close"><i class="fas fa-times"></i></button>
         </div>
         <ul class="sidebar-menu">
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#sobre-mi">Sobre Mí</a></li>
-            <li><a href="#habilidades">Habilidades</a></li>
-            <li><a href="#proyectos">Proyectos</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li class="active"><a href="index.html">Inicio</a></li>
+            <li class="experiencia-no-glow"><a href="experiencia.html">Experiencia</a></li>
         </ul>
     </nav>
 
@@ -60,6 +57,7 @@
             </div>
         </div>
     </section>
+
 
 
     <!-- Sección Habilidades -->
@@ -99,7 +97,7 @@
             </div>
             <!-- Skill: JavaScript -->
             <div class="skill-box">
-                <img src="JavaScript.png" alt="JavaScript">
+                <img src="javascript.png" alt="JavaScript">
                 <h3>JavaScript</h3>
                 <div class="skill-progress">
                 <div class="skill-progress-bar" data-level="2">
@@ -203,7 +201,7 @@
             <i class="fab fa-node-js" title="Node.js"></i>
             <i class="fab fa-python" title="Python"></i>
             </div>
-            <a href="https://discord.gg/DTA4agWEsJ" class="btn">Ver Proyecto</a>
+            <a href="#" class="btn">Ver Proyecto</a>
         </div>
         </div>
     </section>
@@ -216,7 +214,7 @@
             <input type="text" name="name" placeholder="Nombre" required>
             <input type="email" name="email" placeholder="Correo Electrónico" required>
             <textarea name="message" placeholder="Mensaje" required></textarea>
-            <input type="hidden" name="_next" value="gracias.html"> <!-- Aquí pones tu URL de inicio -->
+            <input type="hidden" name="_next" value="https://luca-caporaloni.github.io/Portfolio/"> <!-- Aquí pones tu URL de inicio -->
             <button type="submit" class="btn-glow">Enviar</button>
         </form>
     </section>
