--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Botones en la parte superior derecha -->
     <div class="top-buttons">
-        <a href="#contacto" class="btn-cv" download>Contacto</a>
+        <!--<a href="#contacto" class="btn-cv" download>Contacto</a>-->
         <!-- <a href="#contacto" class="btn-contacto">Contacto</a> -->
     </div>
 
