--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <!-- Skill: JavaScript -->
             <div class="skill-box">
-                <img src="javascript.png" alt="JavaScript">
+                <img src="JavaScript.png" alt="JavaScript">
                 <h3>JavaScript</h3>
                 <div class="skill-progress">
                 <div class="skill-progress-bar" data-level="2">
