--- a/experiencia.html
+++ b/experiencia.html
@@ -119,7 +119,7 @@
                     </p>
                     <p class="experience-career">
                         <span class="label minecraft-text">Rango Máximo:</span> 
-                        <span class="value minecraft-text" style="color: #FD6E35;">Sr Mod</span>
+                        <span class="value minecraft-text" style="color: #ff0000;">Admin</span>
                     </p>
                     <p class="experience-career minecraft-ip" onclick="copyToClipboard('mc.satipocraft.net')" style="cursor: pointer;">
                         <span class="label minecraft-text">IP:</span> 
